--- a/src/Resources/views/login.html.twig
+++ b/src/Resources/views/login.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
-{% set title = "Inicio de Sesión" %}
-
+{%block title %}
+    Inicio de Sesión
+{% endblock %}
 
 {%block classBody 'app flex-row align-items-center' %}
 
