--- a/src/Resources/views/POS/access.html.twig
+++ b/src/Resources/views/POS/access.html.twig
@@ -2,7 +2,8 @@
 {% set title = 'Record'%}
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
 {% block body %}
-<main class="main">   
+<main class="main">
+    {% include 'header_main.html.twig' %}
     <div class="animated fadeIn">
         <!-- Page Header-->
         <div class="jumbotron jumbotron-fluid">
