--- a/src/Resources/views/Menu/category.html.twig
+++ b/src/Resources/views/Menu/category.html.twig
@@ -1,42 +1,33 @@
 {% extends 'base.html.twig' %}
-{% set title = 'Category'%}
+{% block title %}
+    Category
+{% endblock %}
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
 {% block body %}
 <main class="main">
-    {% include 'header_main.html.twig' %}
-    <div class="animated fadeIn">
-        <!-- Page Header-->
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h3 class="display-4">Vamos a crear la categorias de tu menu</h3>
-                <p class="lead">Crea categorias y subcategoria de tu menu</p>
+    {% include 'header_cafeteria.html.twig' %}
+    <div class="container-fluid">
+        <div class="animated fadeIn">
+            <!-- Page Header-->
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h3 class="display-4">Vamos a crear la categorias de tu menu</h3>
+                    <p class="lead">Crea categorias y subcategorias de tu menu</p>
+                    {% if message is not empty %}
+                        <p class="lead"> <b>{{message}}</b> </p>
+                    {% endif %}    
+                </div>
             </div>
-        </div>
-        <!-- COMFIGURACION DE CATEGORIAS   -->
-        <div class="card">
-          <!-- TITULO -->
-            <div class="card-header">
-                <h4 class="card-title">Cafeterias</h4>
-            </div>
-            <div class="card-body">
-                <form>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-l-12 col-md-12 col-xs-12 ml-auto ">
-                                <label >Categoría</label>
-                                <input type="text" class="form-control" id="cliente.categoria"  placeholder="[nombre.categoria]">
-                                <label >Categoria padre </label>
-                                <select type="text" class="form-control" id="cliente.categoria"  placeholder="[Cliente.categoriapadre]">
-                                    <option>Ninguna</option>
-                                    <option>Categoria 1</option>
-                                    <option>Categoria 2</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                <button  class="btn btn-outline-primary col-auto">Guardar</button>
-                <button  class="btn btn-outline-primary col-auto">Cancelar</button>
+            <!-- COMFIGURACION DE CATEGORIAS   -->
+            <div class="card">
+              <!-- TITULO -->
+                <div class="card-header">
+                    <h4 class="card-title">Cafeterias</h4>
+                </div>
+                <div class="card-body">
+                    {{form_start (form) }}
+                    {{form_end (form) }}
+                </div>
             </div>
         </div>
     </div>
