--- a/src/Resources/views/login.html.twig
+++ b/src/Resources/views/login.html.twig
@@ -18,6 +18,11 @@
                 {{form_start (form) }}
                 {{form_end (form) }}
             </div>
+            <div class="row">
+                <div class="col-9 text-left">
+                        <button type="button" class="btn btn-link px-0" data-toggle="modal" data-target="#olvidecontraseña">¿Olvidaste tu contraseña?</button>
+                </div>
+            </div>
           </div>
         </div>
       </div>
