Settings and personal info

--- a/src/Resources/views/Administrator/settings.html.twig
+++ b/src/Resources/views/Administrator/settings.html.twig
@@ -50,55 +50,9 @@
                 </div>
 
 
-              <!-- COMFIGURACION DE NOTIFICACIONES  -->
+              <!-- CONFIGURACION DE NOTIFICACIONES  -->
 
-              <div class="card">
-                <!-- TITULO -->
-                <div class="card-header">
-                <h4 class="card-title">Notificaciones</h4>
-                </div>
-
-                <div class="card-body">
-
-                  <form>
-                          <div class="form-group">
-                            <div class="row">
-
-                                <div class="col-4">
-                                  <label >Ingresos</label> <br>
-                                  <label class="switch switch-3d switch-info">
-                                  <input type="checkbox" class="switch-input" checked>
-                                  <span class="switch-label"></span>
-                                  <span class="switch-handle"></span>
-                                  </label>
-                                </div>
-
-                                <div class="col-4">
-                                  <label >Promociones</label> <br>
-                                  <label class="switch switch-3d switch-info">
-                                  <input type="checkbox" class="switch-input" checked>
-                                  <span class="switch-label"></span>
-                                  <span class="switch-handle"></span>
-                                  </label>
-                                </div>
-
-                                <div class="col-4">
-                                  <label>General</label> <br>
-                                  <label class="switch switch-3d switch-info">
-                                  <input type="checkbox" class="switch-input" checked>
-                                  <span class="switch-label"></span>
-                                  <span class="switch-handle"></span>
-                                  </label>
-                                </div>
-
-                              </div>
-                            </div>
-
-                 </form>
-                 <button  class="btn btn-outline-primary col-auto">Guardar</button>
-                 
-                </div>
-              </div>
+   
     </div>
   </div>
    
