--- a/src/Resources/views/Administrator/activity.html.twig
+++ b/src/Resources/views/Administrator/activity.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %}
-    Activity
+    Actividad
 {% endblock %}
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
 {% block body %}
