--- a/src/Resources/views/Administrator/personal.html.twig
+++ b/src/Resources/views/Administrator/personal.html.twig
@@ -25,24 +25,18 @@
         </div>
 
         <div class="card-body">
-
-          <form>
-
                   <div class="form-group ">
 
                   <div class="row">
-                    <div class="col-xs-12 col-md-4 col-lg-3">
-                        <img src="{{asset("img/avatars/avatar.png")}}" class="rounded mx-auto d-block img-fluid" alt="Avatar  ">
-                        <input type="file" value="Subir imagen">
-                    </div>
-                    <div class="col-xs-12 col-md-8 col-lg-9 ml-auto">                          
+                   
+                    <div class="card-body">                          
                        {{form_start (form) }}
                        {{form_end (form) }}
 
                       </div>
                     </div>
                   </div>
-        </form>
+
         </div>
 
       </div>
