Employees and more

--- a/src/Resources/views/Menu/category.html.twig
+++ b/src/Resources/views/Menu/category.html.twig
@@ -25,8 +25,8 @@
                     <h4 class="card-title">Cafeterias</h4>
                 </div>
                 <div class="card-body">
-                    {{form_start (form) }}
-                    {{form_end (form) }}
+                    {{form_start (formCreateMenu) }}
+                    {{form_end (formCreateMenu) }}
                 </div>
             </div>
         </div>
