--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,15 +34,18 @@
             {% endblock %}
         
         </div>
-        {% block javascripts %}
-            
-        {% endblock %}
+        
         <script src="{{asset('vendors/js/jquery.min.js')}}"></script>
+        <script src="{{asset('vendors/js/js.cookie.js')}}"></script>
         <script src="{{asset('vendors/js/popper.min.js')}}"></script>
         <script src="{{asset('vendors/js/bootstrap.min.js')}}"></script>
         <script src="{{asset('vendors/js/pace.min.js')}}"></script>
         <script src="{{asset('vendors/js/Chart.min.js')}}"></script>
         <script src="{{asset('js/views/shared.js')}}"></script>
+        <script src="{{ asset('vendors/js/jquery.min.js') }}"></script>
+        {% block javascripts %}
+            
+        {% endblock %}
         {% block footer %}
             {% include 'footer.html.twig' %}
         {% endblock %}
