--- a/src/Resources/views/POS/access.html.twig
+++ b/src/Resources/views/POS/access.html.twig
@@ -18,75 +18,7 @@
                     {% endif %}
                 </div>
             </div>
-        <!-- PRIMERA CARTA -->
-            <div class="row">
-                <div class="col-md-12 mb-4">
-                    <div class="row">
-                        <div class="col-sm-5">
-                          <h3 class="card-title clearfix mb-0"> </h3>
-                        </div>
-                    </div>
-                      <!-- TABLAS -->
-                    <table class= "table table-responsive-sm table-hover table-outline mb-0 ">
-                        <!-- TITULOS DE TABLA -->
-                        <thead class="thead-light ">
-                            <tr>
-                                <th>#</th>
-                                <th>Puesto</th>
-                                <th>Nombre de empleado</th>
-                                <th>Contraseña</th>
-                                <th>Añadir</th>
-                                <th>Eliminar</th>
-                            </tr>
-                        </thead>
-                        <!-- tbody de tabla -->
-                        <tbody>
-                        <!-- FILA 1 -->
-                            <tr> <!-- etiqueta tr inicia la fila -->
-                            <!-- # -->
-                                <td> 1 </td>
-                              <!-- tipo de empleados -->
-                                <td> <!-- Inicia las opciones -->
-                                    <select class="form-control form-control-sm">
-                                        <option selected>Puesto</option>
-                                        <option value="1">Cajero</option>
-                                        <option value="2">Entregas</option>
-                                </td> <!-- Termina las opciones -->
-                                <!-- nombre empleado -->
-                                <!-- form-control-auto se adapta al tamaño de la oracion mas grande -->
-                                <td>
-                                    <input type="text" class="form-control" id=""  placeholder="Nombre de usuario">
-                                </td>
-                                <!-- contraseña  -->
-                                <td>
-                                    <input type="password" class="form-control" id=""  placeholder="Contraseña de usuario">
-                                </td>
-                                <!-- guardar cambios -->
-                                <td>
-                                    <a>
-                                        <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#modalconfirmarempleado">
-                                        Añadir
-                                        </button>
-                                    </a>
-                                </td>
-                                <!-- eliminar empleado -->
-                                <td>
-                                    <a>
-                                        <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#modaleliminarempleado">
-                                        Eliminar
-                                        </button>
-                                    </a>
-                                </td>
-
-                            </tr> <!-- Termina la fila 1 -->
-                        </tbody>
-                    </table>
-                    <div class="card-body">
-                        {{form_start (formAddEmp) }}
-                        {{form_end (formAddEmp) }}
-                    </div>
-                </div>
-            </div>
+        
             <!-- PRIMERA CARTA -->
             <div class="row">
                 <div class="col-md-12 mb-4">
@@ -105,6 +37,9 @@
                                 <th>Nombre de Usuario</th>
                                 <th>Editar</th>
                                 <th>Eliminar</th>
+                                <th> 
+                                    <button class="text-success" data-toggle="modal" data-target="#createEmployee"> <i class="fa fa-lg fa-plus-circle"></i></button>
+                                </th>
                             </tr>
                         </thead>
                         <!-- tbody de tabla -->
@@ -116,7 +51,7 @@
                                     <td> {{employee.name}} </td>
                                     <td> {{employee.username}}</td>
                                     <td>
-                                        <button data-pos='{"id_employee": "{{employee.id}}"}' type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#modalconfirmarempleado">
+                                        <button data-pos='{"id_employee": "{{employee.id}}"}' onclick="updateEmployee('/guiconnection/public/admin/resources/employee/{{employee.id}}',this)" type="button" class="btn btn-outline-primary" >
                                             Editar
                                         </button>
                                     </td>
@@ -130,10 +65,6 @@
                             
                         </tbody>
                     </table>
-                    <div class="card-body">
-                        {{form_start (formAddEmp) }}
-                        {{form_end (formAddEmp) }}
-                    </div>
                 </div>
             </div>
         </div>
@@ -141,25 +72,24 @@
 </main>
 {% endblock %}
 {% block modals %}
-<!-- INICIO MODAL CONFIRMAR EMPLEADO-->
+<!-- INICIO MODAL AÑADIR EMPLEADO-->
 <!-- Modal --> <!-- El id que recibe id="modal#" tiene que ser el mismo que se pone en el buton en
   data-target ="#modal#" -->
-<div class="modal fade" id="modalconfirmarempleado" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="createEmployee" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalconfirmardiaespecial">Confirmación de empleado</h5>
+                <h5 class="modal-title" id="modalconfirmardiaespecial">Añadir</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                Confirma la configuración que has realizado, si no estas seguro oprime cancelar o cierra esta ventana.
+                
+                {{form_start(formCreateEmp)}}
+                {{form_end(formCreateEmp)}}
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-              <button type="button" class="btn btn-primary">Confirmar cambios</button>
-            </div>
+           
         </div>
     </div>
 </div>
