--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -3,7 +3,7 @@
       <nav class="sidebar-nav">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="{{path('dashboard')}}"><i class="icon-speedometer"></i> Dashboard </a>
+            <a class="nav-link" href="{{path('dashboard', {'cafeteria': cafeteria }) }}"><i class="icon-speedometer"></i> Dashboard </a>
           </li>
           <li class="divider"></li>
 
@@ -48,10 +48,10 @@
                 <a class="nav-link" href="menu/category.html"><i class="icon-grid"></i>Categorias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="menu/ingredient.html"><i class="icon-note"></i>Ingredientes</a>
+                <a class="nav-link" href="menu/ingredient.html"><i class="icon-note"></i>Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="menu/product.html"><i class="icon-cup"></i>Productos</a>
+                <a class="nav-link" href="menu/product.html"><i class="icon-cup"></i>Bundles</a>
               </li>
             </ul>
           </li>
@@ -63,7 +63,7 @@
           </li>
           <!-- FORMS OPTION -->
           <li class="nav-item nav-dropdown">
-            <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-screen-smartphone"></i>Creador de app</a>
+            <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-screen-smartphone"></i>Personaliza tu App</a>
             <ul class="nav-dropdown-items">
               <li class="nav-item">
                 <a class="nav-link" href="creator/dragdrop.html"><i class="icon-puzzle"></i> Arrastra y suelta</a>
@@ -96,7 +96,7 @@
   <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-folder"></i>Reportes</a>
   <ul class="nav-dropdown-items">
     <li class="nav-item">
-      <a class="nav-link" href="data/session.html"><i class="icon-book-open"></i>Sesiones </a>
+      <a class="nav-link" href="data/session.html"><i class="icon-book-open"></i>Corte de Caja</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="data/income.html"><i class="icon-wallet"></i>Ingresos</a>
