--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -1,5 +1,31 @@
 
     <div class="sidebar">
+ <!-- sidebar header-->
+      <div class="sidebar-header">
+
+        <button type="button" class="btn btn-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <!--<img src="img/avatars/cafeteria.png" class="img-avatar" alt="Avatar"> -->
+          <i class="fa fa-coffee fa-3x"></i>
+        </button>
+        <div class="divider" ></div>
+        <div>
+          <strong>Administrador</strong>
+        </div>
+        <div class="text-muted">
+          <small>Cuckoo Box</small>
+        </div>
+
+            <div class="dropdown-menu">
+              <div class="dropdown-header text-center">
+                <strong>Mis cafeterias</strong>
+              </div>
+              <a class="dropdown-item" href="#"><i class="fa fa-user-o"></i> Cuckoo Coffee</a>
+              <a class="dropdown-item" href="#"><i class="fa fa-user-o"></i> Cuckoo Box</a>
+              <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Cerrar sesión</a>
+            </div>
+
+      </div> <!-- sidebar header-->
+
       <nav class="sidebar-nav">
         <ul class="nav">
           <li class="nav-item">
@@ -132,21 +158,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about/tutorial.html"><i class="icon-question"></i>Tutorial</a>
-              </li>
-            </ul>
-          </li>
-
-
-
-
-          <li class="nav-item nav-dropdown">
-            <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-globe"></i>Mis cafeterias</a>
-            <ul class="nav-dropdown-items">
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="icon-heart"></i>[Cuckoo]</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="icon-heart"></i>[Cuckoo Box]</a>
               </li>
             </ul>
           </li>
